# i3-bindings

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_release.yml
src/: cli.rs  config_reader.rs  main.rs  table_adapter.rs
src/drawers/: csv_drawer.rs  md_trable_drawer.rs  mod.rs  table_drawer.rs
