[package]
name = "i3-bindings"
version = "1.0.0"
authors = ["Andrea Tupini <tupini07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
dirs = "2.0.2"
regex = "1.3.9"
clap = "3.0.0-beta.1"
csv = "1.1.3"
serde = { version = "1.0.111", features = ["derive"] }