[package]
name = "i3-bindings"
version = "1.0.1"
description = "Simple tool that reads the i3 config files and shows a table with the bindings defined therein"
authors = ["Andrea Tupini <tupini07@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tupini07/i3-bindings"
repository = "https://github.com/tupini07/i3-bindings"
documentation = "https://github.com/tupini07/i3-bindings"
keywords = ["i3", "window-manager", "config"]
categories = ["command-line-utilities", "config"]

[dependencies]
prettytable-rs = "^0.8"
dirs = "3.0.1"
regex = "1.3.9"
clap = "3.0.0-beta.1"
csv = "1.1.3"
serde = { version = "1.0.111", features = ["derive"] }
